<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/hz_space"
        android:layout_marginEnd="@dimen/hz_space">

        <Button
            android:id="@+id/read_usb_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:padding="@dimen/button_padding"
            android:text="@string/read_from_usb"
            android:layout_marginTop="@dimen/hz_space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/usb_data"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/vt_space"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            app:layout_constraintTop_toBottomOf="@id/read_usb_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/usb_data_tv"
                    style="@style/DefaultTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/connect_usb"
                    android:layout_marginStart="@dimen/hz_space"
                    android:layout_marginEnd="@dimen/hz_space"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/scan_qr_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:padding="@dimen/button_padding"
            android:text="@string/scan_qr_code"
            android:layout_marginTop="@dimen/vt_space"
            app:layout_constraintTop_toBottomOf="@id/usb_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/scan_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/vt_space"
            android:layout_marginBottom="@dimen/hz_space_2x"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/scan_qr_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/submit_btn"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/camera_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/scan_data_tv"
                    style="@style/DefaultTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/hz_space"
                    android:layout_marginEnd="@dimen/hz_space"
                    android:gravity="center"
                    android:text="@string/scan_qr_code_using_camera" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="@dimen/hz_space"
            android:layout_marginBottom="@dimen/vt_space"
            android:padding="@dimen/button_padding"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textAppearance="@style/TitleTextViewStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>